@@ -1,3 +1,8 @@
+2008-05-28
+  - Added the RGB<->RYB hue conversion.
+  - Added an angle parameter to the tetrad scheme to control the shape of
+    the rectangle.
+
 2008-05-27
   - Released 0.1a2
 
